# CANES

./: CMakeLists.txt  LICENSE  Makefile  README.md  download_dataset.sh  inference_main.cpp  linodeScript.sh  main.cpp  pyproject.toml
backup/: no_bottleneck.cpp  utransmambanet.cpp  utransmambanet.hpp
images/: pyproject.toml  tikzmake.sh
images/Canesnet/: main.py  main.tex
models/: deep_supervised_utransmamba.hpp  model_enhancers.hpp  model_stub.hpp  unet.cpp  unet.hpp  utransmambanet.cpp  utransmambanet.hpp
utils/: acdc_dataset.cpp  acdc_dataset.hpp  custom_loss.cpp  custom_loss.hpp  data_augmentation.hpp  driver.cpp  driver.hpp  statistics.cpp  statistics.hpp
